# realty-hub

./: .env.example  .gitignore  2026-03-19-151318-hi-session-18-read-claudemd-and-docsscopemd.txt  2026-03-27-221519-local-command-caveatcaveat-the-messages-below-w.txt  2026-03-27-223753-session-41.txt  2026-03-29-172044-session-43x-ad-hoc-fixes-replace-edit-text-but.txt  ANTIGRAVITY-onboarding-brief.md  CHANGELOG.md  CLAUDE-MD-PATCH-S28.md  CLAUDE-UPDATES.md  CLAUDE.md  CURSOR.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/commands/: export.md  savechat.md
.devcontainer/: devcontainer.json  post-create.sh
claude-migrate/: README.md  restore.sh
config/: pgadmin-servers.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  GEMINI_SETUP.md  OPERATIONS.md  ROADMAP-v2.md  RUNBOOK.md  SCHEMA.md  SCOPE-S31.md  SCOPE.md  SESSION_LOG.md  SPECIFICATIONS.md  SYNC-NOTES.md  TESTING_LOG.md  USAGE.md
docs/archive/: SCOPE.md
scripts/: backup-db.sh  backup_kestra_db.sh  claude-log.sh  create_agent.sh  deploy-vm.sh  kestra_flow_sync.sh  migrate.sh  provision-vm.sh  regenerate-titles.sh  restore_kestra_db.sh  seed_sample_data.py  seed_sample_listings.sql  show_execution_log.py  sync-db-to-vm.sh  sync-db.sh  sync-uploads.sh  transform_zalo_export.py
src/: config.py
tests/: test_csv_loader.py  test_vietnamese_parser.py  test_zalo_transformer.py
web/: 2026-03-25-162510-session-31-thank-you.txt  2026-03-28-201526-session-43-be-efficient-with-tokens-use-linear-m.txt  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+314 files in other folders)
